# voicevox_ros2_speaker

./: .dockerignore  .gitignore  Dockerfile  README.md  cyclonedds.xml  docker-compose.yml  docker-entrypoint.sh
docs/specs/: system_design.md  voicevox_web_speaker.md
src/voicevox_speaker/: package.xml  requirements.txt  setup.cfg  setup.py
src/voicevox_speaker/launch/: voicevox_player.launch.py  voicevox_speaker.launch.py  voicevox_synth.launch.py
src/voicevox_speaker/test/: conftest.py  test_speaker_logic.py
src/voicevox_speaker/voicevox_speaker/: player_node.py  speak_cli.py  speaker_node.py  synth_node.py
src/voicevox_speaker/web/: index.html
